update progress bar

--- a/resources/design/qss/StyleTemplate.qss
+++ b/resources/design/qss/StyleTemplate.qss
@@ -100,7 +100,11 @@ QLabel {
 }
 
 QProgressBar {
-    max-height: 8px;
+    max-height: 4px;
     border-color: transparent;
     background-color: transparent;
+}
+
+QProgressBar::chunk {
+    background-color: qlineargradient(spread:pad, x1:0, x2:1, stop:0 transparent, stop:0.5 %(feature_color)s, stop:1 transparent);
 }
