--- a/resources/design/ui/MainView.ui
+++ b/resources/design/ui/MainView.ui
@@ -6,33 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>292</width>
-    <height>339</height>
+    <width>258</width>
+    <height>312</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QPushButton" name="add">
-      <property name="text">
-       <string>add Module</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <layout class="QHBoxLayout" name="hbox"/>
-    </item>
-   </layout>
+   <layout class="QVBoxLayout" name="verticalLayout"/>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>292</width>
+     <width>258</width>
      <height>26</height>
     </rect>
    </property>
