--- a/resources/design/ui/module1.ui
+++ b/resources/design/ui/module1.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>311</width>
-    <height>186</height>
+    <height>205</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -46,7 +46,7 @@
     </layout>
    </item>
    <item>
-    <widget class="QPushButton" name="button">
+    <widget class="QPushButton" name="apply">
      <property name="text">
       <string>generate random</string>
      </property>
@@ -100,61 +100,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QProgressBar" name="loading">
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="autoFillBackground">
-      <bool>false</bool>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="maximum">
-      <number>1</number>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-     <property name="textVisible">
-      <bool>false</bool>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="invertedAppearance">
-      <bool>false</bool>
-     </property>
-     <property name="textDirection">
-      <enum>QProgressBar::TopToBottom</enum>
-     </property>
-     <property name="format">
-      <string>%p%</string>
-     </property>
-    </widget>
-   </item>
-   <item alignment="Qt::AlignHCenter|Qt::AlignVCenter">
-    <widget class="QLabel" name="result">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>50</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>20</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
