set table widget windowable

--- a/resources/design/ui/TableWidget.ui
+++ b/resources/design/ui/TableWidget.ui
@@ -16,10 +16,13 @@
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <item>
       <widget class="QLabel" name="label_2">
        <property name="text">
-        <string>vertical header</string>
+        <string>vertical header  </string>
        </property>
       </widget>
      </item>
@@ -38,6 +41,20 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="windowed">
+       <property name="text">
+        <string>windowed</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="Line" name="line">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
