--- a/resources/design/ui/Node.ui
+++ b/resources/design/ui/Node.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>255</width>
-    <height>221</height>
+    <width>240</width>
+    <height>69</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -76,6 +76,19 @@
          <width>0</width>
          <height>0</height>
         </size>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="hideResult">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>10</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
        </property>
       </widget>
      </item>
