update table with memory usage and else

--- a/resources/design/ui/TableWidget.ui
+++ b/resources/design/ui/TableWidget.ui
@@ -43,9 +43,25 @@
       </spacer>
      </item>
      <item>
-      <widget class="QCheckBox" name="windowed">
+      <widget class="QPushButton" name="windowed">
+       <property name="maximumSize">
+        <size>
+         <width>30</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>13</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
        <property name="text">
-        <string>windowed</string>
+        <string>⛶</string>
+       </property>
+       <property name="flat">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
