--- a/resources/design/qss/StyleTemplate.qss
+++ b/resources/design/qss/StyleTemplate.qss
@@ -2,12 +2,12 @@ QMainWindow {
     background-color: %(mainback_color)s;
 }
 
-QGraphicsView {
-    background-color: %(viewback_color)s;
-}
-
 QViewWidget {
     background-color: %(mainback_color)s;
+}
+
+QGraphicsView {
+    background-color: %(viewback_color)s;
 }
 
 QToolButton {
@@ -150,12 +150,14 @@ QProgressBar::chunk {
     background-color: qlineargradient(spread:pad, x1:0, x2:1, stop:0 transparent, stop:0.5 %(feature_color)s, stop:1 transparent);
 }
 
+
 QHeaderView::section{
     border-top:0px solid black;
     border-left:0px solid black;
     border-right:1px solid black;
     border-bottom: 1px solid black;
     background-color:white;
+    color: black;
     padding:4px;
 }
 
