--- a/resources/design/ui/TableWidget.ui
+++ b/resources/design/ui/TableWidget.ui
@@ -43,7 +43,34 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="windowed">
+      <widget class="QLabel" name="title">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="maximize">
        <property name="maximumSize">
         <size>
          <width>30</width>
