--- a/resources/design/ui/modules/loadCSV.ui
+++ b/resources/design/ui/modules/loadCSV.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>343</width>
-    <height>152</height>
+    <width>363</width>
+    <height>182</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -58,13 +58,6 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QLineEdit" name="header">
-         <property name="text">
-          <string>5</string>
-         </property>
-        </widget>
-       </item>
        <item row="1" column="5">
         <widget class="QCheckBox" name="clean">
          <property name="text">
@@ -75,13 +68,6 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="3">
-        <widget class="QLineEdit" name="decimal">
-         <property name="text">
-          <string>,</string>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="2">
         <widget class="QLabel" name="label_13">
          <property name="text">
@@ -89,13 +75,6 @@
          </property>
          <property name="alignment">
           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="3">
-        <widget class="QLineEdit" name="separator">
-         <property name="text">
-          <string>\t</string>
          </property>
         </widget>
        </item>
@@ -119,10 +98,10 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="1">
-        <widget class="QLineEdit" name="encoding">
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="header">
          <property name="text">
-          <string>latin-1</string>
+          <string>5</string>
          </property>
         </widget>
        </item>
@@ -134,6 +113,72 @@
          <property name="checked">
           <bool>false</bool>
          </property>
+        </widget>
+       </item>
+       <item row="0" column="3">
+        <widget class="QComboBox" name="separator">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>{tabulation}</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>;</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>,</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>:</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>{espace}</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="1" column="3">
+        <widget class="QComboBox" name="decimal">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>,</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>.</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QComboBox" name="encoding">
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+         <item>
+          <property name="text">
+           <string>latin-1</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>utf-8</string>
+          </property>
+         </item>
         </widget>
        </item>
       </layout>
