--- a/resources/design/ui/modules/describe.ui
+++ b/resources/design/ui/modules/describe.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>316</width>
-    <height>179</height>
+    <height>170</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,7 +59,7 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="layout">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="1">
@@ -113,17 +113,14 @@
        </item>
       </layout>
      </item>
-     <item alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="apply">
-       <property name="text">
-        <string>apply</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="loading"/>
-     </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QPushButton" name="apply">
+     <property name="text">
+      <string>apply</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
