--- a/resources/design/ui/modules/merge.ui
+++ b/resources/design/ui/modules/merge.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>360</width>
-    <height>181</height>
+    <width>363</width>
+    <height>170</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -124,18 +130,11 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="layout">
-     <item alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="apply">
-       <property name="text">
-        <string>apply</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="loading"/>
-     </item>
-    </layout>
+    <widget class="QPushButton" name="apply">
+     <property name="text">
+      <string>apply</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
