--- a/resources/design/ui/modules/selectRows.ui
+++ b/resources/design/ui/modules/selectRows.ui
@@ -6,14 +6,27 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>315</width>
-    <height>181</height>
+    <width>354</width>
+    <height>204</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <widget class="QLabel" name="label_6">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Select rows by criteria</string>
+     </property>
+    </widget>
+   </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
@@ -136,18 +149,11 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="layout">
-     <item alignment="Qt::AlignTop">
-      <widget class="QPushButton" name="apply">
-       <property name="text">
-        <string>apply</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="loading"/>
-     </item>
-    </layout>
+    <widget class="QPushButton" name="apply">
+     <property name="text">
+      <string>apply</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
