--- a/resources/design/ui/modules/merge.ui
+++ b/resources/design/ui/modules/merge.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>363</width>
-    <height>170</height>
+    <width>365</width>
+    <height>217</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -135,6 +135,19 @@
       <string>apply</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
