--- a/resources/design/ui/modules/save.ui
+++ b/resources/design/ui/modules/save.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>346</width>
-    <height>81</height>
+    <width>348</width>
+    <height>88</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,6 +56,19 @@
       <string>apply</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
