--- a/resources/design/ui/modules/selectColumns.ui
+++ b/resources/design/ui/modules/selectColumns.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>448</width>
-    <height>440</height>
+    <width>404</width>
+    <height>161</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -61,8 +61,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>424</width>
-        <height>364</height>
+        <width>380</width>
+        <height>85</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -82,14 +82,16 @@
         <number>0</number>
        </property>
        <item>
-        <layout class="QGridLayout" name="grid">
-         <property name="bottomMargin">
-          <number>4</number>
-         </property>
-         <property name="spacing">
-          <number>0</number>
-         </property>
-        </layout>
+        <widget class="QWidget" name="colnames" native="true">
+         <layout class="QGridLayout" name="grid">
+          <property name="bottomMargin">
+           <number>4</number>
+          </property>
+          <property name="spacing">
+           <number>0</number>
+          </property>
+         </layout>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="apply">
