--- a/resources/design/ui/modules/bricks/formatLine.ui
+++ b/resources/design/ui/modules/bricks/formatLine.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>386</width>
-    <height>22</height>
+    <width>380</width>
+    <height>43</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -31,6 +31,15 @@
    </property>
    <item>
     <widget class="QComboBox" name="types">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="editable">
+      <bool>true</bool>
+     </property>
      <item>
       <property name="text">
        <string>--</string>
