--- a/resources/design/ui/modules/describe.ui
+++ b/resources/design/ui/modules/describe.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>316</width>
-    <height>170</height>
+    <height>187</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,17 @@
      <item row="0" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QComboBox" name="column"/>
+        <widget class="QComboBox" name="column">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="editable">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="ignore_nan">
@@ -54,7 +64,11 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QComboBox" name="group_by"/>
+      <widget class="QComboBox" name="group_by">
+       <property name="editable">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
